# plugin.gst

./: CMakeLists.txt  README.md  build.cmake  plugin.gst-1.14.0.vsd  version.h  webstreamer.vsd
doc/: gst-launch  sink.txt
filesink/: CMakeLists.txt
filesink/lib/: gstelements.c  gstfilesink.c  gstfilesink.h  packageinfo.h
hls/: CMakeLists.txt  cusplugininfo.h
hls/docs/: cushls.vsd  ~$$cushls.~vsd
hls/lib/: cusplugininfo.h  gsthlsplugin.c  gsthlssink.c  gsthlssink2.c  gsthlssink2.h  gstm3u8playlist.c  gstm3u8playlist.h  packageinfo.h
memorysink/: CMakeLists.txt
memorysink/lib/: gstmemorysink.c  gstmemorysink.h  gstplugins.c  packageinfo.h
multifile/: CMakeLists.txt
multifile/lib/: gstmultifile.c  gstsplitmuxsink.c  gstsplitmuxsink.h  gstsplitmuxsrc.c  packageinfo.h
